--- a/sr_hand_config/1370/calibrations/calibration.yaml
+++ b/sr_hand_config/1370/calibrations/calibration.yaml
@@ -1,52 +1,52 @@
 sr_calibrations: [
-["FFJ1", [[3152.0, 0.0], [2424.0, 22.5], [1714.0, 45.0], [1043.0, 67.5], [430.0, 90.0]]], 
-["FFJ2", [[2464.0, 0.0], [2140.0, 22.5], [1811.0, 45.0], [1429.0, 67.5], [1083.0, 90.0]]], 
-["FFJ3", [[1339.0, 0.0], [1948.0, 22.5], [2603.0, 45.0], [3071.0, 67.5], [3336.0, 90.0]]], 
-["FFJ4", [[985.0, -20.0], [1508.0, -10.0], [1848.0, 0.0], [1975.0, 10.0], [2043.0, 20.0]]], 
-["MFJ1", [[2942.0, 0.0], [2332.0, 22.5], [1685.0, 45.0], [1012.0, 67.5], [399.0, 90.0]]], 
-["MFJ2", [[2660.0, 0.0], [2226.0, 22.5], [1820.0, 45.0], [1377.0, 67.5], [982.0, 90.0]]], 
-["MFJ3", [[1345.0, 0.0], [1866.0, 22.5], [2519.0, 45.0], [2977.0, 67.5], [3322.0, 90.0]]], 
-["MFJ4", [[1070.0, -20.0], [1625.0, -10.0], [1874.0, 0.0], [2009.0, 10.0], [2068.0, 20.0]]], 
-["RFJ1", [[3244.0, 0.0], [2531.0, 22.5], [1772.0, 45.0], [1013.0, 67.5], [339.0, 90.0]]], 
-["RFJ2", [[2398.0, 0.0], [2002.0, 22.5], [1582.0, 45.0], [1193.0, 67.5], [913.0, 90.0]]], 
-["RFJ3", [[1205.0, 0.0], [1687.0, 22.5], [2286.0, 45.0], [2803.0, 67.5], [3140.0, 90.0]]], 
-["RFJ4", [[2031.0, -20.0], [1980.0, -10.0], [1845.0, 0.0], [1546.0, 10.0], [1081.0, 20.0]]], 
-["LFJ1", [[2866.0, 0.0], [2292.0, 22.5], [1607.0, 45.0], [979.0, 67.5], [507.0, 90.0]]], 
-["LFJ2", [[2921.0, 0.0], [2662.0, 22.5], [2299.0, 45.0], [1833.0, 67.5], [1362.0, 90.0]]], 
-["LFJ3", [[1413.0, 0.0], [1990.0, 22.5], [2557.0, 45.0], [2993.0, 67.5], [3245.0, 90.0]]], 
-["LFJ4", [[2039.0, -20.0], [1990.0, -10.0], [1881.0, 0.0], [1604.0, 10.0], [1096.0, 20.0]]], 
+["FFJ1", [[3065.0, 0.0], [2398.0, 22.5], [1717.0, 45.0], [1101.0, 67.5], [498.0, 90.0]]], 
+["FFJ2", [[2444.0, 0.0], [2169.0, 22.5], [1803.0, 45.0], [1436.0, 67.5], [1082.0, 90.0]]], 
+["FFJ3", [[1353.0, 0.0], [2037.0, 22.5], [2644.0, 45.0], [3076.0, 67.5], [3336.0, 90.0]]], 
+["FFJ4", [[892.0, -20.0], [1539.0, -10.0], [1866.0, 0.0], [2001.0, 10.0], [2045.0, 20.0]]], 
+["MFJ1", [[2900.0, 0.0], [2344.0, 22.5], [1666.0, 45.0], [981.0, 67.5], [410.0, 90.0]]], 
+["MFJ2", [[2659.0, 0.0], [2255.0, 22.5], [1836.0, 45.0], [1394.0, 67.5], [988.0, 90.0]]], 
+["MFJ3", [[1346.0, 0.0], [1934.0, 22.5], [2535.0, 45.0], [3007.0, 67.5], [3304.0, 90.0]]], 
+["MFJ4", [[1113.0, -20.0], [1619.0, -10.0], [1881.0, 0.0], [2015.0, 10.0], [2070.0, 20.0]]], 
+["RFJ1", [[3210.0, 0.0], [2541.0, 22.5], [1772.0, 45.0], [1055.0, 67.5], [418.0, 90.0]]], 
+["RFJ2", [[2387.0, 0.0], [2012.0, 22.5], [1602.0, 45.0], [1212.0, 67.5], [908.0, 90.0]]], 
+["RFJ3", [[1214.0, 0.0], [1708.0, 22.5], [2256.0, 45.0], [2769.0, 67.5], [3197.0, 90.0]]], 
+["RFJ4", [[2049.0, -20.0], [1996.0, -10.0], [1869.0, 0.0], [1564.0, 10.0], [1002.0, 20.0]]], 
+["LFJ1", [[2868.0, 0.0], [2307.0, 22.5], [1623.0, 45.0], [1011.0, 67.5], [528.0, 90.0]]], 
+["LFJ2", [[2921.0, 0.0], [2640.0, 22.5], [2284.0, 45.0], [1782.0, 67.5], [1309.0, 90.0]]], 
+["LFJ3", [[1434.0, 0.0], [1984.0, 22.5], [2544.0, 45.0], [2986.0, 67.5], [3233.0, 90.0]]], 
+["LFJ4", [[2037.0, -20.0], [1980.0, -10.0], [1818.0, 0.0], [1462.0, 10.0], [1051.0, 20.0]]], 
 ["LFJ5", [[3490.0, 0.0], [2417.0, 22.5], [1785.0, 45.0], [839.0, 67.5]]], 
-["THJ3", [[2352.0, -15.0], [1821.0, 0.0], [1401.0, 15.0]]], 
-["THJ4", [[1545.0, 0.0], [1881.0, 22.5], [2139.0, 45.0], [2409.0, 67.5]]], 
-["THJ5", [[704.46, -60.0], [1330.95, -30.0], [2042.34, 0.0], [2727.6, 30.0], [3312.525, 60.0]]], 
-["WRJ1", [[2457.0, -45.0], [2248.0, -22.5], [2038.0, 0.0], [1903.0, 15.0], [1770.0, 30.0]]], 
-["WRJ2", [[2677.0, -30.0], [1125.0, 0.0], [545.0, 10.0]]], 
+["THJ3", [[2352.0, -12.0], [1821.0, 0.0], [1401.0, 12.0]]], 
+["THJ4", [[1588.0, 0.0], [1880.0, 22.5], [2130.0, 45.0], [2405.0, 67.5]]], 
+["THJ5", [[1319.0, -60.0], [1660.0, -45.0], [1972.0, -30.0], [2393.0, -15.0], [2681.0, 0.0], [2375.0, 15.0], [3358.0, 30.0], [3574.0, 45.0], [3746.0, 60.0]]], 
+["WRJ1", [[2391.0, -45.0], [2188.0, -22.5], [1981.0, 0.0], [1838.0, 15.0], [1723.0, 30.0]]], 
+["WRJ2", [[2749.0, -30.0], [1150.0, 0.0], [559.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2642.0, 2298.0], 0.0, 40.0], 
-                    [[2630.0, 2157.0], 0.0, 20.0], 
-                    [[2616.0, 1994.0], 0.0, 0.0], 
-                    [[2600.0, 1844.0], 0.0, -20.0], 
-                    [[2589.0, 1750.0], 0.0, -40.0], 
-                    [[2442.0, 2285.0], 22.5, 40.0], 
-                    [[2429.0, 2148.0], 22.5, 20.0], 
-                    [[2416.0, 1988.0], 22.5, 0.0], 
-                    [[2401.0, 1835.0], 22.5, -20.0], 
-                    [[2392.0, 1735.0], 22.5, -40.0], 
-                    [[2079.0, 2272.0], 45.0, 40.0], 
-                    [[2071.0, 2130.0], 45.0, 20.0], 
-                    [[2058.0, 1970.0], 45.0, 0.0], 
-                    [[2045.0, 1815.0], 45.0, -20.0], 
-                    [[2040.0, 1722.0], 45.0, -40.0], 
-                    [[1648.0, 2257.0], 67.5, 40.0], 
-                    [[1638.0, 2116.0], 67.5, 20.0], 
-                    [[1626.0, 1957.0], 67.5, 0.0], 
-                    [[1615.0, 1806.0], 67.5, -20.0], 
-                    [[1609.0, 1704.0], 67.5, -40.0], 
-                    [[1428.0, 2245.0], 90.0, 40.0], 
-                    [[1409.0, 2111.0], 90.0, 20.0], 
-                    [[1394.0, 1951.0], 90.0, 0.0], 
-                    [[1395.0, 1793.0], 90.0, -20.0], 
-                    [[1385.0, 1690.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[2650.0, 2301.0], 0.0, 40.0], 
+                    [[2641.0, 2162.0], 0.0, 20.0], 
+                    [[2629.0, 1998.0], 0.0, 0.0], 
+                    [[2611.0, 1844.0], 0.0, -20.0], 
+                    [[2594.0, 1737.0], 0.0, -40.0], 
+                    [[2464.0, 2289.0], 22.5, 40.0], 
+                    [[2455.0, 2157.0], 22.5, 20.0], 
+                    [[2443.0, 1987.0], 22.5, 0.0], 
+                    [[2429.0, 1836.0], 22.5, -20.0], 
+                    [[2432.0, 1725.0], 22.5, -40.0], 
+                    [[2128.0, 2275.0], 45.0, 40.0], 
+                    [[2129.0, 2139.0], 45.0, 20.0], 
+                    [[2112.0, 1973.0], 45.0, 0.0], 
+                    [[2106.0, 1815.0], 45.0, -20.0], 
+                    [[2097.0, 1712.0], 45.0, -40.0], 
+                    [[1693.0, 2254.0], 67.5, 40.0], 
+                    [[1660.0, 2119.0], 67.5, 20.0], 
+                    [[1640.0, 1955.0], 67.5, 0.0], 
+                    [[1625.0, 1800.0], 67.5, -20.0], 
+                    [[1635.0, 1692.0], 67.5, -40.0], 
+                    [[1456.0, 2246.0], 90.0, 40.0], 
+                    [[1427.0, 2113.0], 90.0, 20.0], 
+                    [[1409.0, 1951.0], 90.0, 0.0], 
+                    [[1385.0, 1793.0], 90.0, -20.0], 
+                    [[1384.0, 1682.0], 90.0, -40.0]]]
 ]
