--- a/sr_hand_config/1370/calibrations/calibration.yaml
+++ b/sr_hand_config/1370/calibrations/calibration.yaml
@@ -13,54 +13,59 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[3065.0, 0.0], [2398.0, 22.5], [1717.0, 45.0], [1101.0, 67.5], [498.0, 90.0]]], 
-["FFJ2", [[2444.0, 0.0], [2169.0, 22.5], [1803.0, 45.0], [1436.0, 67.5], [1082.0, 90.0]]], 
-["FFJ3", [[1353.0, 0.0], [2037.0, 22.5], [2644.0, 45.0], [3076.0, 67.5], [3336.0, 90.0]]], 
-["FFJ4", [[892.0, -20.0], [1539.0, -10.0], [1866.0, 0.0], [2001.0, 10.0], [2045.0, 20.0]]], 
-["MFJ1", [[2900.0, 0.0], [2344.0, 22.5], [1666.0, 45.0], [981.0, 67.5], [410.0, 90.0]]], 
-["MFJ2", [[2659.0, 0.0], [2255.0, 22.5], [1836.0, 45.0], [1394.0, 67.5], [988.0, 90.0]]], 
-["MFJ3", [[1346.0, 0.0], [1934.0, 22.5], [2535.0, 45.0], [3007.0, 67.5], [3304.0, 90.0]]], 
-["MFJ4", [[1113.0, -20.0], [1619.0, -10.0], [1881.0, 0.0], [2015.0, 10.0], [2070.0, 20.0]]], 
-["RFJ1", [[3210.0, 0.0], [2541.0, 22.5], [1772.0, 45.0], [1055.0, 67.5], [418.0, 90.0]]], 
-["RFJ2", [[2387.0, 0.0], [2012.0, 22.5], [1602.0, 45.0], [1212.0, 67.5], [908.0, 90.0]]], 
-["RFJ3", [[1214.0, 0.0], [1708.0, 22.5], [2256.0, 45.0], [2769.0, 67.5], [3197.0, 90.0]]], 
-["RFJ4", [[2049.0, -20.0], [1996.0, -10.0], [1835.0, 0.0], [1564.0, 10.0], [1002.0, 20.0]]], 
-["LFJ1", [[2868.0, 0.0], [2307.0, 22.5], [1623.0, 45.0], [1011.0, 67.5], [528.0, 90.0]]], 
-["LFJ2", [[2921.0, 0.0], [2640.0, 22.5], [2284.0, 45.0], [1782.0, 67.5], [1309.0, 90.0]]], 
-["LFJ3", [[1434.0, 0.0], [1984.0, 22.5], [2544.0, 45.0], [2986.0, 67.5], [3233.0, 90.0]]], 
-["LFJ4", [[2037.0, -20.0], [1980.0, -10.0], [1818.0, 0.0], [1462.0, 10.0], [1051.0, 20.0]]], 
-["LFJ5", [[3490.0, 0.0], [2417.0, 22.5], [1785.0, 45.0], [839.0, 67.5]]], 
-["THJ3", [[2352.0, -12.0], [1821.0, 0.0], [1401.0, 12.0]]], 
-["THJ4", [[1588.0, 0.0], [1880.0, 22.5], [2100.0, 45.0], [2415.0, 67.5]]], 
-["THJ5", [[1279.0, -60.0], [1624.0, -45.0], [2004.0, -30.0], [2472.0, -15.0], [2667.0, 0.0], [3100.0, 15.0], [3290.0, 30.0], [3591.0, 45.0], [3750.0, 60.0]]], 
-["WRJ1", [[2391.0, -45.0], [2188.0, -22.5], [1981.0, 0.0], [1838.0, 15.0], [1723.0, 30.0]]], 
-["WRJ2", [[2749.0, -30.0], [1150.0, 0.0], [559.0, 10.0]]], 
+["FFJ1", [[3064.0, 0.0], [2471.0, 22.5], [1769.0, 45.0], [1108.0, 67.5], [555.0, 90.0]]], 
+["FFJ2", [[2766.0, 0.0], [2452.0, 22.5], [2065.0, 45.0], [1665.0, 67.5], [1311.0, 90.0]]], 
+["FFJ3", [[2782.0, -15.0], [2507.0, 0.0], [2208.0, 15.0], [1896.0, 30.0], [1632.0, 45.0], [1281.0, 60.0], [1021.0, 75.0], [835.0, 90.0]]], 
+["FFJ4", [[2711.0, -20.0], [2540.0, -10.0], [2360.0, 0.0], [2149.0, 10.0], [1968.0, 20.0]]], 
+["MFJ1", [[3266.0, 0.0], [2624.0, 22.5], [1980.0, 45.0], [1323.0, 67.5], [710.0, 90.0]]], 
+["MFJ2", [[2825.0, 0.0], [2531.0, 22.5], [2176.0, 45.0], [1801.0, 67.5], [1464.0, 90.0]]], 
+["MFJ3", [[2765.0, -15.0], [2467.0, 0.0], [2127.0, 15.0], [1796.0, 30.0], [1465.0, 45.0], [1178.0, 60.0], [958.0, 75.0], [798.0, 90.0]]], 
+["MFJ4", [[2553.0, -20.0], [2325.0, -10.0], [2025.0, 0.0], [1768.0, 10.0], [1485.0, 20.0]]], 
+["RFJ1", [[3141.0, 0.0], [2519.0, 22.5], [1873.0, 45.0], [1222.0, 67.5], [689.0, 90.0]]], 
+["RFJ2", [[3012.0, 0.0], [2719.0, 22.5], [2315.0, 45.0], [1913.0, 67.5], [1555.0, 90.0]]], 
+["RFJ3", [[2951.0, -15.0], [2626.0, 0.0], [2196.0, 15.0], [1857.0, 30.0], [1491.0, 45.0], [1329.0, 60.0], [900.0, 75.0], [712.0, 90.0]]], 
+["RFJ4", [[1866.0, -20.0], [2183.0, -10.0], [2430.0, 0.0], [2687.0, 10.0], [2942.0, 20.0]]], 
+["LFJ1", [[3052.01, 0.0], [2388.0, 22.5], [1718.0, 45.0], [1066.0, 67.5], [554.0, 90.0]]], 
+["LFJ2", [[2950.93, 0.0], [2652.0, 22.5], [2239.0, 45.0], [1750.0, 67.5], [1365.0, 90.0]]], 
+["LFJ3", [[2613.0, -15.0], [2379.96, 0.0], [2028.0, 15.0], [1738.0, 30.0], [1467.0, 45.0], [1220.0, 60.0], [985.0, 75.0], [819.0, 90.0]]], 
+["LFJ4", [[1295.0, -20.0], [1528.0, -10.0], [1783.0, 0.0], [2018.0, 10.0], [2242.0, 20.0]]], 
+["LFJ5", [[636.0, 0.0], [1492.0, 22.5], [2028.0, 45.0], [2516.0, 67.5]]], 
+["THJ3", [[2060.52, -12.0], [1821.0, 0.0], [1130.8, 12.0]]], 
+["THJ4", [[2521.0, 0.0], [2405.0, 11.25], [2264.0, 22.5], [2120.0, 33.75], [1980.0, 45.0], [1840.0, 56.25], [1702.0, 67.5]]], 
+["THJ5", [[566.0, -60.0], [823.0, -45.0], [1077.0, -30.0], [1334.0, -15.0], [1668.0, 0.0], [2141.0, 15.0], [2503.0, 30.0], [2767.0, 45.0], [3009.0, 60.0]]], 
+["WRJ1", [[2171.0, -45.0], [2003.0, -22.5], [1872.0, 0.0], [1746.0, 15.0], [1663.0, 30.0]]], 
+["WRJ2", [[2671.0, -30.0], [1283.0, 0.0], [761.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2650.0, 2301.0], 0.0, 40.0], 
-                    [[2641.0, 2162.0], 0.0, 20.0], 
-                    [[2629.0, 1998.0], 0.0, 0.0], 
-                    [[2611.0, 1844.0], 0.0, -20.0], 
-                    [[2594.0, 1737.0], 0.0, -40.0], 
-                    [[2464.0, 2289.0], 22.5, 40.0], 
-                    [[2495.0, 2157.0], 22.5, 20.0], 
-                    [[2483.0, 1987.0], 22.5, 0.0], 
-                    [[2429.0, 1836.0], 22.5, -20.0], 
-                    [[2432.0, 1725.0], 22.5, -40.0], 
-                    [[2128.0, 2275.0], 45.0, 40.0], 
-                    [[2169.0, 2139.0], 45.0, 20.0], 
-                    [[2152.0, 1973.0], 45.0, 0.0], 
-                    [[2106.0, 1815.0], 45.0, -20.0], 
-                    [[2097.0, 1712.0], 45.0, -40.0], 
-                    [[1693.0, 2254.0], 67.5, 40.0], 
-                    [[1660.0, 2119.0], 67.5, 20.0], 
-                    [[1640.0, 1955.0], 67.5, 0.0], 
-                    [[1625.0, 1800.0], 67.5, -20.0], 
-                    [[1635.0, 1692.0], 67.5, -40.0], 
-                    [[1456.0, 2246.0], 90.0, 40.0], 
-                    [[1427.0, 2113.0], 90.0, 20.0], 
-                    [[1409.0, 1951.0], 90.0, 0.0], 
-                    [[1385.0, 1793.0], 90.0, -20.0], 
-                    [[1384.0, 1682.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3181.0, 2388.0], -15.0, 40.0], 
+                    [[3164.0, 2206.0], -15.0, 20.0], 
+                    [[3142.0, 2016.0], -15.0, 0.0], 
+                    [[3132.0, 1842.0], -15.0, -20.0], 
+                    [[3115.0, 1697.0], -15.0, -40.0], 
+                    [[2978.0, 2368.0], 0.0, 40.0], 
+                    [[2961.0, 2196.0], 0.0, 20.0], 
+                    [[2939.0, 2004.0], 0.0, 0.0], 
+                    [[2929.0, 1825.0], 0.0, -20.0], 
+                    [[2923.0, 1684.0], 0.0, -40.0], 
+                    [[2585.0, 2341.0], 22.5, 40.0], 
+                    [[2572.0, 2161.0], 22.5, 20.0], 
+                    [[2555.0, 1971.0], 22.5, 0.0], 
+                    [[2540.0, 1797.0], 22.5, -20.0], 
+                    [[2529.0, 1669.0], 22.5, -40.0], 
+                    [[2236.0, 2327.0], 45.0, 40.0], 
+                    [[2221.0, 2151.0], 45.0, 20.0], 
+                    [[2204.0, 1961.0], 45.0, 0.0], 
+                    [[2190.0, 1793.0], 45.0, -20.0], 
+                    [[2177.0, 1651.0], 45.0, -40.0], 
+                    [[1779.0, 2301.0], 67.5, 40.0], 
+                    [[1763.0, 2129.0], 67.5, 20.0], 
+                    [[1745.0, 1933.0], 67.5, 0.0], 
+                    [[1731.0, 1761.0], 67.5, -20.0], 
+                    [[1720.0, 1621.0], 67.5, -40.0], 
+                    [[1430.0, 2285.0], 90.0, 40.0], 
+                    [[1413.0, 2109.0], 90.0, 20.0], 
+                    [[1400.0, 1915.0], 90.0, 0.0], 
+                    [[1387.0, 1746.0], 90.0, -20.0], 
+                    [[1383.0, 1610.0], 90.0, -40.0]]]
 ]
