--- a/sr_hand_config/4698/calibrations/calibration prod.yaml
+++ b/sr_hand_config/4698/calibrations/calibration prod.yaml
@@ -1,21 +1,35 @@
+# Copyright 2022 Shadow Robot Company Ltd.
+#
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
+# more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program. If not, see <http://www.gnu.org/licenses/>.
+
 sr_calibrations: [
-["FFJ1", [[3228.0, 0.0], [2461.0, 22.5], [1664.0, 45.0], [929.0, 67.5], [330.0, 90.0]]], 
-["FFJ2", [[2792.0, 0.0], [2382.0, 22.5], [1908.0, 45.0], [1461.0, 67.5], [1115.0, 90.0]]], 
-["FFJ3", [[1559.0, -15.0], [1746.0, 0.0], [1945.0, 15.0], [2147.0, 30.0], [2331.0, 45.0], [2500.0, 60.0], [2646.0, 75.0], [2733.0, 90.0]]], 
+["FFJ1", [[3247.0, 0.0], [2537.0, 22.5], [1699.0, 45.0], [974.0, 67.5], [329.0, 90.0]]], 
+["FFJ2", [[2778.0, 0.0], [2392.0, 22.5], [1944.0, 45.0], [1525.0, 67.5], [1173.0, 90.0]]], 
+["FFJ3", [[1731.0, 0.0], [2016.0, 22.5], [2308.0, 45.0], [2567.0, 67.5], [2746.0, 90.0]]], 
 ["FFJ4", [[2546.0, -20.0], [2212.0, -10.0], [1878.0, 0.0], [1544.0, 10.0], [1276.0, 20.0]]], 
-["MFJ1", [[3000.0, 0.0], [2266.0, 22.5], [1523.0, 45.0], [761.0, 67.5], [141.0, 90.0]]], 
-["MFJ2", [[2781.0, 0.0], [2422.0, 22.5], [2004.0, 45.0], [1585.0, 67.5], [1216.0, 90.0]]], 
-["MFJ3", [[1488.0, -15.0], [1691.0, 0.0], [1880.0, 15.0], [2094.0, 30.0], [2309.0, 45.0], [2497.0, 60.0], [2663.0, 75.0], [2778.0, 90.0]]], 
+["MFJ1", [[3069.0, 0.0], [2385.0, 22.5], [1578.0, 45.0], [824.0, 67.5], [203.0, 90.0]]], 
+["MFJ2", [[2777.0, 0.0], [2441.0, 22.5], [2049.0, 45.0], [1647.0, 67.5], [1276.0, 90.0]]], 
+["MFJ3", [[1655.0, 0.0], [1959.0, 22.5], [2273.0, 45.0], [2563.0, 67.5], [2799.0, 90.0]]], 
 ["MFJ4", [[1963.0, -20.0], [1641.0, -10.0], [1344.0, 0.0], [1063.0, 10.0], [812.0, 20.0]]], 
-["RFJ1", [[3272.0, 0.0], [2476.0, 22.5], [1641.0, 45.0], [818.0, 67.5], [93.0, 90.0]]], 
-["RFJ2", [[2829.0, 0.0], [2516.0, 22.5], [2109.0, 45.0], [1739.0, 67.5], [1421.0, 90.0]]], 
-["RFJ3", [[1577.0, -15.0], [1788.0, 0.0], [1956.0, 15.0], [2161.0, 30.0], [2350.0, 45.0], [2578.0, 60.0], [2727.0, 75.0], [2861.0, 90.0]]], 
+["RFJ1", [[3309.0, 0.0], [2489.0, 22.5], [1643.0, 45.0], [870.0, 67.5], [162.0, 90.0]]], 
+["RFJ2", [[2830.0, 0.0], [2516.0, 22.5], [2148.0, 45.0], [1792.0, 67.5], [1449.0, 90.0]]], 
+["RFJ3", [[1772.0, 0.0], [2079.0, 22.5], [2383.0, 45.0], [2661.0, 67.5], [2875.0, 90.0]]], 
 ["RFJ4", [[1176.0, -20.0], [1449.0, -10.0], [1743.0, 0.0], [2069.0, 10.0], [2346.0, 20.0]]], 
-["LFJ1", [[2964.07, 0.0], [2201.97, 22.5], [1424.95, 45.0], [710.91, 67.5], [186.92, 90.0]]], 
-["LFJ2", [[2865.05, 0.0], [2482.65, 22.5], [2021.78, 45.0], [1556.3, 67.5], [1148.62, 90.0]]], 
-["LFJ3", [[1560.08, -15.0], [1739.85, 0.0], [1936.0, 15.0], [2130.99, 30.0], [2334.0, 45.0], [2525.48, 60.0], [2687.44, 75.0], [2809.06, 90.0]]], 
+["LFJ1", [[3010.0, 0.0], [2268.0, 22.5], [1440.0, 45.0], [720.0, 67.5], [204.0, 90.0]]], 
+["LFJ2", [[2834.0, 0.0], [2493.0, 22.5], [2069.0, 45.0], [1645.0, 67.5], [1228.0, 90.0]]], 
+["LFJ3", [[1735.0, 0.0], [2008.0, 22.5], [2295.0, 45.0], [2593.0, 67.5], [2814.0, 90.0]]], 
 ["LFJ4", [[744.0, -20.0], [1121.0, -10.0], [1456.0, 0.0], [1826.0, 10.0], [2175.0, 20.0]]], 
-["LFJ5", [[604.0, 0.0], [1183.0, 22.5], [1675.0, 45.0], [2064.17, 67.5]]], 
+["LFJ5", [[547.0, 0.0], [1155.0, 22.5], [1626.0, 45.0], [2047.0, 67.5]]], 
 ["THJ3", [[2374.0, -12.0], [1638.0, 0.0], [1001.0, 12.0]]], 
 ["THJ4", [[1437.0, 0.0], [1695.0, 22.5], [2018.0, 45.0], [2349.0, 67.5]]], 
 ["THJ5", [[520.0, -60.0], [809.0, -45.0], [1064.0, -30.0], [1357.0, -15.0], [1658.0, 0.0], [2071.0, 15.0], [2456.0, 30.0], [2794.0, 45.0], [3085.0, 60.0]]], 
