--- a/sr_hand_config/5018/calibrations/calibration_prod.yaml
+++ b/sr_hand_config/5018/calibrations/calibration_prod.yaml
@@ -1,21 +1,35 @@
+# Copyright 2022 Shadow Robot Company Ltd.
+#
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
+# more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program. If not, see <http://www.gnu.org/licenses/>.
+
 sr_calibrations: [
-["FFJ1", [[2969.0, 0.0], [2221.0, 22.5], [1466.0, 45.0], [785.0, 67.5], [268.0, 90.0]]], 
-["FFJ2", [[2998.0, 0.0], [2687.0, 22.5], [2282.0, 45.0], [1876.0, 67.5], [1497.0, 90.0]]], 
-["FFJ3", [[2663.0, -15.0], [2361.0, 0.0], [2036.0, 15.0], [1743.0, 30.0], [1489.0, 45.0], [1296.0, 60.0], [1069.0, 75.0], [884.0, 90.0]]], 
+["FFJ1", [[2987.0, 0.0], [2252.0, 22.5], [1457.0, 45.0], [805.0, 67.5], [305.0, 90.0]]], 
+["FFJ2", [[2996.0, 0.0], [2709.0, 22.5], [2318.0, 45.0], [1946.0, 67.5], [1557.0, 90.0]]], 
+["FFJ3", [[2345.26, 0.0], [1878.77, 22.5], [1491.49, 45.0], [1146.31, 67.5], [907.26, 90.0]]], 
 ["FFJ4", [[2119.0, -20.0], [1780.0, -10.0], [1443.0, 0.0], [1125.0, 10.0], [878.0, 20.0]]], 
-["MFJ1", [[2934.0, 0.0], [2272.0, 22.5], [1635.0, 45.0], [1038.0, 67.5], [584.0, 90.0]]], 
-["MFJ2", [[2912.0, 0.0], [2577.0, 22.5], [2139.0, 45.0], [1709.0, 67.5], [1336.0, 90.0]]], 
-["MFJ3", [[2830.0, -15.0], [2491.0, 0.0], [2134.0, 15.0], [1792.0, 30.0], [1451.0, 45.0], [1173.0, 60.0], [953.0, 75.0], [823.0, 90.0]]], 
+["MFJ1", [[2959.0, 0.0], [2323.0, 22.5], [1647.0, 45.0], [1080.0, 67.5], [601.0, 90.0]]], 
+["MFJ2", [[2936.0, 0.0], [2594.0, 22.5], [2191.0, 45.0], [1773.0, 67.5], [1410.0, 90.0]]], 
+["MFJ3", [[2485.0, 0.0], [1991.0, 22.5], [1475.0, 45.0], [1079.0, 67.5], [793.0, 90.0]]], 
 ["MFJ4", [[2281.0, -20.0], [1991.0, -10.0], [1690.0, 0.0], [1406.0, 10.0], [1132.0, 20.0]]], 
-["RFJ1", [[3133.0, 0.0], [2463.0, 22.5], [1784.0, 45.0], [1131.0, 67.5], [588.0, 90.0]]], 
-["RFJ2", [[2861.0, 0.0], [2542.0, 22.5], [2099.0, 45.0], [1636.0, 67.5], [1227.0, 90.0]]], 
-["RFJ3", [[2676.0, -15.0], [2350.0, 0.0], [2006.0, 15.0], [1699.0, 30.0], [1387.0, 45.0], [1133.0, 60.0], [883.0, 75.0], [754.0, 90.0]]], 
+["RFJ1", [[3174.0, 0.0], [2470.0, 22.5], [1844.0, 45.0], [1193.0, 67.5], [647.0, 90.0]]], 
+["RFJ2", [[2832.0, 0.0], [2551.0, 22.5], [2173.0, 45.0], [1711.0, 67.5], [1311.0, 90.0]]], 
+["RFJ3", [[2379.0, 0.0], [1892.0, 22.5], [1384.0, 45.0], [1012.0, 67.5], [712.0, 90.0]]], 
 ["RFJ4", [[991.0, -20.0], [1298.0, -10.0], [1622.0, 0.0], [1965.0, 10.0], [2289.0, 20.0]]], 
-["LFJ1", [[3351.22, 0.0], [2743.64, 22.5], [2035.29, 45.0], [1446.7, 67.5], [728.77, 90.0]]], 
-["LFJ2", [[2848.43, 0.0], [2544.17, 22.5], [2137.8, 45.0], [1728.17, 67.5], [1364.71, 90.0]]], 
-["LFJ3", [[2873.99, -15.0], [2572.03, 0.0], [2228.29, 15.0], [1917.46, 30.0], [1618.6, 45.0], [1333.53, 60.0], [1055.03, 75.0], [863.23, 90.0]]], 
+["LFJ1", [[3398.0, 0.0], [2765.0, 22.5], [2042.0, 45.0], [1467.0, 67.5], [739.0, 90.0]]], 
+["LFJ2", [[2878.0, 0.0], [2550.0, 22.5], [2167.0, 45.0], [1763.0, 67.5], [1448.0, 90.0]]], 
+["LFJ3", [[2668.0, 0.0], [2203.0, 22.5], [1654.0, 45.0], [1183.0, 67.5], [887.0, 90.0]]], 
 ["LFJ4", [[959.0, -20.0], [1241.0, -10.0], [1560.0, 0.0], [1871.0, 10.0], [2198.0, 20.0]]], 
-["LFJ5", [[1565.03, 0.0], [2081.51, 22.5], [2586.74, 45.0], [3193.44, 67.5]]], 
+["LFJ5", [[1512.0, 0.0], [2044.0, 22.5], [2522.0, 45.0], [3206.0, 67.5]]], 
 ["THJ3", [[2497.0, -12.0], [1672.0, 0.0], [1120.0, 12.0]]], 
 ["THJ4", [[1431.0, 0.0], [1722.0, 22.5], [2016.0, 45.0], [2313.0, 67.5]]], 
 ["THJ5", [[528.0, -60.0], [801.0, -45.0], [1051.0, -30.0], [1300.0, -15.0], [1596.0, 0.0], [2013.0, 15.0], [2365.0, 30.0], [2774.0, 45.0], [3078.0, 60.0]]], 
