--- a/sr_hand_config/1066/calibrations/calibration.yaml
+++ b/sr_hand_config/1066/calibrations/calibration.yaml
@@ -12,9 +12,9 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
-{'sr_calibrations': [
-["FFJ1", [[3048.0, 0.0], [2389.0, 22.5], [1711.0, 45.0], [1018.0, 67.5], [442.0, 90.0]]], 
-["FFJ2", [[2684.0, 0.0], [2374.0, 22.5], [1996.0, 45.0], [1611.0, 67.5], [1252.0, 90.0]]], 
+sr_calibrations: [
+["FFJ1", [[3414.84, 0.0], [2898.06, 22.5], [2164.63, 45.0], [1337.44, 67.5], [771.98, 90.0]]], 
+["FFJ2", [[2705.93, 0.0], [2360.19, 22.5], [2065.19, 45.0], [1562.6, 67.5], [1281.06, 90.0]]], 
 ["FFJ3", [[1538.0, 0.0], [2089.0, 22.5], [2681.0, 45.0], [3088.0, 67.5], [3482.0, 90.0]]], 
 ["FFJ4", [[888.0, -20.0], [1376.0, -10.0], [1772.0, 0.0], [1979.0, 10.0], [2058.0, 20.0]]], 
 ["MFJ1", [[2802.0, 0.0], [2077.0, 22.5], [1270.0, 45.0], [575.0, 67.5], [44.0, 90.0]]], 
@@ -24,7 +24,7 @@
 ["RFJ1", [[3245.0, 0.0], [2650.0, 22.5], [1950.0, 45.0], [1368.0, 67.5], [802.0, 90.0]]], 
 ["RFJ2", [[2751.0, 0.0], [2384.0, 22.5], [2046.0, 45.0], [1702.0, 67.5], [1168.0, 90.0]]], 
 ["RFJ3", [[2021.0, 0.0], [2389.0, 22.5], [2792.0, 45.0], [3059.0, 67.5], [3158.0, 90.0]]], 
-["RFJ4", [[2052.43, -20.0], [1964.0, -10.0], [1778.0, 0.0], [1391.0, 10.0], [710.0, 20.0]]], 
+["RFJ4", [[2052.0, -20.0], [1964.0, -10.0], [1778.0, 0.0], [1391.0, 10.0], [710.0, 20.0]]], 
 ["LFJ1", [[0.0, 0.0], [1.0, 0.0]]], 
 ["LFJ2", [[0.0, 0.0], [1.0, 0.0]]], 
 ["LFJ3", [[0.0, 0.0], [1.0, 0.0]]], 
@@ -33,8 +33,8 @@
 ["THJ1", [[2611.0, 0.0], [2198.0, 22.5], [1724.0, 45.0], [1265.0, 67.5], [957.0, 90.0]]], 
 ["THJ2", [[1706.0, -40.0], [1808.0, -20.0], [1979.0, 0.0], [2118.0, 20.0], [2289.0, 40.0]]], 
 ["THJ3", [[0.0, 0.0], [1.0, 0.0]]], 
-["THJ4", [[1563.4, 0.0], [1831.5, 22.5], [2137.11, 45.0], [2446.37, 67.5]]], 
+["THJ4", [[1563.0, 0.0], [1831.0, 22.5], [2137.0, 45.0], [2446.0, 67.5]]], 
 ["THJ5", [[399.0, -60.0], [899.0, -30.0], [1531.0, 0.0], [2316.0, 30.0], [2913.0, 60.0]]], 
 ["WRJ1", [[0.0, 0.0], [1.0, 0.0]]], 
 ["WRJ2", [[0.0, 0.0], [1.0, 0.0]]], 
-]}
+]
