--- a/sr_hand_config/1130/calibrations/calibration.yaml
+++ b/sr_hand_config/1130/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2023 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -12,28 +12,32 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[3001.0, 0.0], [2319.0, 22.5], [1484.0, 45.0], [689.0, 67.5], [195.0, 90.0]]], 
-["FFJ2", [[2710.0, 0.0], [2455.0, 22.5], [2133.0, 45.0], [1802.0, 67.5], [1472.0, 90.0]]], 
-["FFJ3", [[1520.0, 0.0], [1988.0, 22.5], [2443.0, 45.0], [2799.0, 67.5], [3014.0, 90.0]]], 
-["FFJ4", [[784.0, -20.0], [1254.0, -10.0], [1680.0, 0.0], [1906.0, 10.0], [2013.0, 20.0]]], 
-["MFJ1", [[3188.0, 0.0], [2506.0, 22.5], [1683.0, 45.0], [1008.0, 67.5], [462.0, 90.0]]], 
-["MFJ2", [[2684.0, 0.0], [2330.0, 22.5], [1940.0, 45.0], [1568.0, 67.5], [1231.0, 90.0]]], 
-["MFJ3", [[1446.0, 0.0], [1982.0, 22.5], [2516.0, 45.0], [2963.0, 67.5], [3278.0, 90.0]]], 
-["MFJ4", [[1111.0, -20.0], [1525.0, -10.0], [1821.0, 0.0], [2026.0, 10.0], [2085.0, 20.0]]], 
-["RFJ1", [[2929.0, 0.0], [2146.0, 22.5], [1353.0, 45.0], [699.0, 67.5], [238.0, 90.0]]], 
-["RFJ2", [[3000.36, 0.0], [2655.0, 22.5], [2322.0, 45.0], [1962.0, 67.5], [1627.0, 90.0]]], 
-["RFJ3", [[1770.0, 0.0], [2186.0, 22.5], [2585.0, 45.0], [2932.0, 67.5], [3116.0, 90.0]]], 
-["RFJ4", [[2047.0, -20.0], [1997.0, -10.0], [1870.0, 0.0], [1542.0, 10.0], [782.0, 20.0]]], 
-["LFJ1", [[3281.0, 0.0], [2607.0, 22.5], [1798.0, 45.0], [834.0, 67.5], [342.0, 90.0]]], 
-["LFJ2", [[2793.0, 0.0], [2553.0, 22.5], [2202.0, 45.0], [1834.0, 67.5], [1462.0, 90.0]]], 
-["LFJ3", [[1514.0, 0.0], [1985.0, 22.5], [2493.0, 45.0], [2956.0, 67.5], [3223.0, 90.0]]], 
-["LFJ4", [[2039.0, -20.0], [1941.0, -10.0], [1702.0, 0.0], [1249.0, 10.0], [626.0, 20.0]]], 
-["LFJ5", [[1491.0, 0.0], [1876.0, 22.5], [2238.0, 45.0], [2818.0, 67.5]]], 
+["FFJ1", [[2935.0, 0.0], [2124.0, 22.5], [1417.0, 45.0], [679.0, 67.5], [238.0, 90.0]]], 
+["FFJ2", [[2719.0, 0.0], [2418.0, 22.5], [2121.0, 45.0], [1825.0, 67.5], [1467.0, 90.0]]], 
+["FFJ3", [[2729.0, 0.0], [2075.0, 22.5], [1481.0, 45.0], [1028.0, 67.5], [707.0, 90.0]]], 
+["FFJ4", [[608.0, -20.0], [1285.0, -10.0], [1711.0, 0.0], [1943.0, 10.0], [2010.0, 20.0]]], 
+["MFJ1", [[2917.0, 0.0], [2318.0, 22.5], [1645.0, 45.0], [1026.0, 67.5], [489.0, 90.0]]], 
+["MFJ2", [[2672.0, 0.0], [2327.0, 22.5], [1992.0, 45.0], [1632.0, 67.5], [1239.0, 90.0]]], 
+["MFJ3", [[2749.81, 0.0], [2133.0, 22.5], [1533.0, 45.0], [1059.0, 67.5], [733.0, 90.0]]], 
+["MFJ4", [[897.0, -20.0], [1490.0, -10.0], [1840.0, 0.0], [1974.0, 10.0], [2031.0, 20.0]]], 
+["RFJ1", [[2889.0, 0.0], [2040.0, 22.5], [1350.0, 45.0], [737.0, 67.5], [317.0, 90.0]]], 
+["RFJ2", [[2857.0, 0.0], [2638.0, 22.5], [2290.0, 45.0], [1936.0, 67.5], [1608.0, 90.0]]], 
+["RFJ3", [[2555.0, 0.0], [2018.0, 22.5], [1404.0, 45.0], [897.0, 67.5], [551.0, 90.0]]], 
+["RFJ4", [[2036.0, -20.0], [1988.0, -10.0], [1845.0, 0.0], [1514.0, 10.0], [992.0, 20.0]]], 
+["LFJ1", [[3072.0, 0.0], [2451.0, 22.5], [1631.0, 45.0], [1072.0, 67.5], [382.0, 90.0]]], 
+["LFJ2", [[2815.0, 0.0], [2440.0, 22.5], [2145.0, 45.0], [1684.0, 67.5], [1415.0, 90.0]]], 
+["LFJ3", [[2706.0, 0.0], [2015.0, 22.5], [1366.0, 45.0], [797.0, 67.5], [521.0, 90.0]]], 
+["LFJ4", [[2014.0, -20.0], [1962.0, -10.0], [1814.0, 0.0], [1570.0, 10.0], [1006.0, 20.0]]], 
+["LFJ5", [[1284.29, 0.0], [1738.0, 22.5], [2042.0, 45.0], [2441.0, 67.5]]], 
 ["THJ3", [[1462.0, -15.0], [2145.0, 0.0], [2578.0, 15.0]]], 
-["THJ4", [[1731.0, 0.0], [2047.0, 22.5], [2328.0, 45.0], [2571.0, 67.5]]], 
-["THJ5", [[575.0, -60.0], [1196.0, -30.0], [1967.0, 0.0], [2701.0, 30.0], [3189.0, 60.0]]], 
-["WRJ1", [[2536.0, -45.0], [2394.0, -22.5], [2170.0, 0.0], [2037.0, 15.0], [1902.0, 30.0]]], 
+["THJ4", [[1695.0, 0.0], [1963.0, 22.5], [2279.0, 45.0], [2523.0, 67.5]]], 
+["THJ5", [[879.0, -60.0], [1369.0, -30.0], [2108.0, 0.0], [2818.0, 30.0], [3440.0, 60.0]]], 
+["WRJ1", [[2425.0, -45.0], [2242.0, -22.5], [2000.865, 0.0], [1862.0, 15.0], [1743.0, 30.0]]], 
 ["WRJ2", [[3083.0, -30.0], [1713.0, 0.0], [1418.0, 10.0]]], 
 ]
 
