--- a/sr_hand_config/1370/general_info.yaml
+++ b/sr_hand_config/1370/general_info.yaml
@@ -14,10 +14,10 @@
 
 side: 'right'
 type: 'hand_e'
-version: 'E4'
+version: 'E3M5'
 fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: mst, ff: mst, mf: mst, rf: mst, lf: mst}
+  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
   mid: {}
   prox: {}
   palm: {}
