--- a/sr_hand_config/5946/calibrations/calibration.yaml
+++ b/sr_hand_config/5946/calibrations/calibration.yaml
@@ -13,21 +13,21 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[3137.0, 0.0], [2459.0, 22.5], [1726.0, 45.0], [1087.0, 67.5], [567.0, 90.0]]], 
-["FFJ2", [[2820.0, 0.0], [2557.0, 22.5], [2196.0, 45.0], [1818.0, 67.5], [1451.0, 90.0]]], 
-["FFJ3", [[2535.0, 0.0], [2134.0, 22.5], [1678.0, 45.0], [1302.0, 67.5], [1078.0, 90.0]]], 
+["FFJ1", [[3141.0, 0.0], [2459.0, 22.5], [1726.0, 45.0], [1087.0, 67.5], [567.0, 90.0]]], 
+["FFJ2", [[2813.0, 0.0], [2557.0, 22.5], [2196.0, 45.0], [1818.0, 67.5], [1451.0, 90.0]]], 
+["FFJ3", [[2721.0, -15.0], [[2535.0, 0.0], [2134.0, 22.5], [1678.0, 45.0], [1302.0, 67.5], [1078.0, 90.0]]], 
 ["FFJ4", [[2287.0, -20.0], [1984.0, -10.0], [1679.0, 0.0], [1375.0, 10.0], [1151.0, 20.0]]], 
-["MFJ1", [[3098.0, 0.0], [2443.0, 22.5], [1792.0, 45.0], [1170.0, 67.5], [646.0, 90.0]]], 
-["MFJ2", [[3065.0, 0.0], [2802.0, 22.5], [2436.0, 45.0], [2031.0, 67.5], [1596.0, 90.0]]], 
-["MFJ3", [[2143.0, 0.0], [1668.0, 22.5], [1237.0, 45.0], [948.0, 67.5], [806.0, 90.0]]], 
+["MFJ1", [[3097.0, 0.0], [2443.0, 22.5], [1792.0, 45.0], [1170.0, 67.5], [646.0, 90.0]]], 
+["MFJ2", [[3059.0, 0.0], [2802.0, 22.5], [2436.0, 45.0], [2031.0, 67.5], [1596.0, 90.0]]], 
+["MFJ3", [[2451.0, -15.0], [[2143.0, 0.0], [1668.0, 22.5], [1237.0, 45.0], [948.0, 67.5], [806.0, 90.0]]], 
 ["MFJ4", [[2810.0, -20.0], [2514.0, -10.0], [2188.0, 0.0], [1852.0, 10.0], [1516.0, 20.0]]], 
-["RFJ1", [[3031.0, 0.0], [2491.0, 22.5], [1960.0, 45.0], [1478.0, 67.5], [1078.0, 90.0]]], 
-["RFJ2", [[2847.0, 0.0], [2576.0, 22.5], [2207.0, 45.0], [1810.0, 67.5], [1449.0, 90.0]]], 
-["RFJ3", [[2510.0, 0.0], [2045.0, 22.5], [1583.0, 45.0], [1161.0, 67.5], [872.0, 90.0]]], 
+["RFJ1", [[3011.0, 0.0], [2478.0, 22.5], [1960.0, 45.0], [1478.0, 67.5], [1078.0, 90.0]]], 
+["RFJ2", [[2827.0, 0.0], [2563.0, 22.5], [2207.0, 45.0], [1810.0, 67.5], [1449.0, 90.0]]], 
+["RFJ3", [[2802.0, -15.0], [[2510.0, 0.0], [2045.0, 22.5], [1583.0, 45.0], [1161.0, 67.5], [872.0, 90.0]]], 
 ["RFJ4", [[914.0, -20.0], [1203.0, -10.0], [1549.0, 0.0], [1884.0, 10.0], [2224.0, 20.0]]], 
-["LFJ1", [[2468.0, 0.0], [1940.0, 22.5], [1474.0, 45.0], [1060.0, 67.5], [822.0, 90.0]]], 
-["LFJ2", [[2798.0, 0.0], [2547.0, 22.5], [2233.0, 45.0], [1899.0, 67.5], [1587.0, 90.0]]], 
-["LFJ3", [[2707.0, 0.0], [2269.0, 22.5], [1848.0, 45.0], [1410.0, 67.5], [1108.0, 90.0]]], 
+["LFJ1", [[2479.0, 0.0], [1940.0, 22.5], [1474.0, 45.0], [1060.0, 67.5], [822.0, 90.0]]], 
+["LFJ2", [[2785.0, 0.0], [2547.0, 22.5], [2233.0, 45.0], [1899.0, 67.5], [1587.0, 90.0]]], 
+["LFJ3", [[2909.0, -15.0], [[2707.0, 0.0], [2269.0, 22.5], [1848.0, 45.0], [1410.0, 67.5], [1108.0, 90.0]]], 
 ["LFJ4", [[1272.0, -20.0], [1488.0, -10.0], [1742.0, 0.0], [1983.0, 10.0], [2199.0, 20.0]]], 
 ["LFJ5", [[1594.0, 0.0], [2094.0, 22.5], [2647.0, 45.0], [3422.0, 67.5]]], 
 ["THJ3", [[2483.0, -15.0], [1658.0, 0.0], [1105.0, 15.0]]], 
